815: Millores visuals i literals de traducció
Task-Url: https://github.com/GovernIB/helium/issues/issue/815

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -54,7 +54,7 @@ expedient.llistat.columna.iniciat=Iniciat el
 expedient.llistat.columna.finalitzat=Finalitzat el
 expedient.llistat.columna.tipus=Tipus
 expedient.llistat.columna.estat=Estat
-expedient.llistat.accio.consultar=Consultar
+expedient.llistat.accio.consultar=Gestionar
 expedient.llistat.accio.consultar.expedient=Consultar expedient
 expedient.llistat.accio.aturar=Aturar
 expedient.llistat.accio.reprendre=Reprendre
@@ -206,7 +206,7 @@ expedient.tasca.confirmacio.agafar=Estau segur que voleu agafar aquesta tasca?
 expedient.tasca.doc.generar.confirm=Es generarà un document. Voleu continuar?
 expedient.tasca.nohiha=No hi ha tasques per a mostrar
 expedient.tasca.activa.nohiha=No hi ha tasques actives per a mostrar
-expedient.tasca.segon.pla.bloquejada=Aquesta tasca està programada per executarse en segon pla i no es pot editar.
+expedient.tasca.segon.pla.bloquejada=Aquesta tasca està pendent de finalització en segon pla.
 
 expedient.accio.errors.titol=Errors de l'expedient
 expedient.accio.aturar.titol=Aturar expedient
