815: Millores visuals i literals de traducció
Task-Url: https://github.com/GovernIB/helium/issues/issue/815

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -207,6 +207,7 @@ expedient.tasca.doc.generar.confirm=Es generarà un document. Voleu continuar?
 expedient.tasca.nohiha=No hi ha tasques per a mostrar
 expedient.tasca.activa.nohiha=No hi ha tasques actives per a mostrar
 expedient.tasca.segon.pla.bloquejada=Aquesta tasca està pendent de finalització en segon pla.
+expedient.tasca.segon.pla.finalitzada=Aquesta tasca ja ha finalitzat i s'ha actualitzat.
 
 expedient.accio.errors.titol=Errors de l'expedient
 expedient.accio.aturar.titol=Aturar expedient
