--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -45,6 +45,7 @@ error.camp.dada.valida=La fecha introducida no es una válida
 error.permis.codi.repetit=Ja existeix un altre rol amb aquest codi
 error.info.expedient.imatgeproces=No hi ha imatge per a aquesta definició de procés
 error.descarregar.fitxer=Error al descarregar el fitxer amb token
+error.validacio.token=Error de validació retrocedint token
 
 error.validator=Error intern de validació
 
