--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -55,7 +55,7 @@ expedient.llistat.columna.iniciat=Iniciat el
 expedient.llistat.columna.finalitzat=Finalitzat el
 expedient.llistat.columna.tipus=Tipus
 expedient.llistat.columna.estat=Estat
-expedient.llistat.accio.consultar=Consultar
+expedient.llistat.accio.consultar=Gestionar
 expedient.llistat.accio.consultar.expedient=Consultar expedient
 expedient.llistat.accio.aturar=Aturar
 expedient.llistat.accio.reprendre=Reprendre
@@ -207,7 +207,8 @@ expedient.tasca.confirmacio.agafar=Estau segur que voleu agafar aquesta tasca?
 expedient.tasca.doc.generar.confirm=Es generarà un document. Voleu continuar?
 expedient.tasca.nohiha=No hi ha tasques per a mostrar
 expedient.tasca.activa.nohiha=No hi ha tasques actives per a mostrar
-expedient.tasca.segon.pla.bloquejada=Aquesta tasca està programada per executarse en segon pla i no es pot editar.
+expedient.tasca.segon.pla.bloquejada=Aquesta tasca està pendent de finalització en segon pla.
+expedient.tasca.segon.pla.finalitzada=Aquesta tasca ja ha finalitzat i s'ha actualitzat.
 
 expedient.tipus.llistat.titol=Tipus d'expedient
 expedient.tipus.llistat.columna.codi=Codi
