--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -207,7 +207,7 @@ expedient.tasca.doc.generar.confirm=Es generarà un document. Voleu continuar?
 expedient.tasca.nohiha=No hi ha tasques per a mostrar
 expedient.tasca.activa.nohiha=No hi ha tasques actives per a mostrar
 expedient.tasca.segon.pla.bloquejada=Aquesta tasca està pendent de finalització en segon pla.
-expedient.tasca.segon.pla.finalitzada=Aquesta tasca ja ha finalitzat i s'ha actualitzat.
+expedient.tasca.segon.pla.finalitzada=No es troba la tasca o ja s'ha finalitzat.
 
 expedient.accio.errors.titol=Errors de l'expedient
 expedient.accio.aturar.titol=Aturar expedient
