826: Redefinició de permisos de l'aplicació
Task-Url: http://github.com/GovernIB/helium/issues/issue/826

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -213,15 +213,11 @@ expedient.tasca.segon.pla.finalitzada=No es troba la tasca o ja s'ha finalitzat.
 expedient.tipus.llistat.titol=Tipus d'expedient
 expedient.tipus.llistat.columna.codi=Codi
 expedient.tipus.llistat.columna.titol=Títol
+expedient.tipus.llistat.accio.permisos=Permisos
 expedient.tipus.llistat.accio.nou=Nou tipus d'expedient
-expedient.tipus.llistat.accio.consultar=Consultar
+expedient.tipus.llistat.accio.dissenyar=Dissenyar
 expedient.tipus.llistat.accio.esborrar=Esborrar
 expedient.tipus.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest tipus d'expedient? Aquesta acció no es pot tornar enrera una vegada executada.
-
-expedient.tipus.missatge.creat=El tipus d'expedient s'ha creat correctament
-expedient.tipus.missatge.modificat=El tipus d'expedient s'ha modificat correctament
-expedient.tipus.missatge.eliminat=El tipus d'expedient s'ha elimitat correctament
-expedient.tipus.missatge.eliminar.expedients.relacionats=El tipus d'expedient no s'ha pogut eliminar perquè té expedients relacionats
 
 expedient.tipus.info.titol=Informació del tipus d'expedient
 expedient.tipus.info.informacio=Informació
@@ -266,12 +262,29 @@ expedient.tipus.form.camp.restringirPerGrup=Restringir accés segons el grups de 
 expedient.tipus.form.camp.seleccionarAny=Permetre seleccionar any d'inici d'expedient
 expedient.tipus.form.camp.ambRetroaccio=Amb retroacció
 
+expedient.tipus.permis.titol=Permisos del tipus d'expedient
+expedient.tipus.permis.columna.principal=Principal
+expedient.tipus.permis.columna.tipus=Tipus
+expedient.tipus.permis.columna.permisos=Permisos
+expedient.tipus.permis.confirmacio.esborrar=Estau segur que voleu esborrar aquest permís?
+expedient.tipus.permis.accio.nou=Nou permís
+
+expedient.tipus.permis.form.titol.nou=Nou permis
+expedient.tipus.permis.form.titol.modificar=Modificar permis
+expedient.tipus.permis.form.camp.tipus=Tipus
+expedient.tipus.permis.form.camp.principal=Principal
 
 expedient.tipus.validacio=Errors de validació
 expedient.tipus.validacio.codi.repetit=Aquest codi ja existeix
 expedient.tipus.validacio.seq.any=El format de l''any està buit o és incorrecte
 expedient.tipus.validacio.seq.any.repetit=Hi ha anys repetits en la taula de seqüències
 expedient.tipus.validacio.seq.valor=El format de la seqüència està buit o és incorrecte
+
+expedient.tipus.controller.creat=El tipus d'expedient s'ha creat correctament
+expedient.tipus.controller.modificat=El tipus d'expedient s'ha modificat correctament
+expedient.tipus.controller.eliminat=El tipus d'expedient s'ha elimitat correctament
+expedient.tipus.controller.eliminar.expedients.relacionats=Hi ha expedients iniciats amb aquest tipus
+expedient.tipus.controller.permis.actualitzat=S'ha actualitzat el permis per al tipus d'expedient
 
 expedient.accio.errors.titol=Errors de l'expedient
 expedient.accio.aturar.titol=Aturar expedient
@@ -408,11 +421,13 @@ comu.filtre.exportar=Exportar
 comu.filtre.importar=Importar
 comu.boto.accions=Accions
 comu.boto.eines=Eines
+comu.boto.guardar=Guardar
 comu.boto.cancelar=Cancel·lar
 comu.boto.generar=Generar
 comu.boto.tancar=Tancar
 comu.boto.crear=Crear
 comu.boto.modificar=Modificar
+comu.boto.tornar=Tornar
 comu.tots=Tots
 
 comu.true=Sí
@@ -456,6 +471,12 @@ metriques.timers.handlers=Handlers
 metriques.timers.jobs=Jobs
 metriques.timers.generics=Genèrics
 
+permis.READ=Llegir
+permis.WRITE=Modificar
+permis.CREATE=Crear
+permis.DELETE=Esborrar
+permis.ADMINISTRATION=Administrar
+permis.DESIGN=Disseny
 
 #############################################################
 # MISSATGES D'ERROR
