833: Reindexació d'expedients asíncrona
Task-Url: https://github.com/GovernIB/helium/issues/issue/833

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -289,6 +289,7 @@ expedient.tipus.form.any=Any
 expedient.tipus.form.sequencia=Seqüència
 expedient.tipus.form.seq_actuals=Seqüències actuals
 expedient.tipus.form.amb_retroaccio=Amb retroacció
+expedient.tipus.form.reindexacio_asincrona=Reindexació asíncrona
 
 expedient.massiva.reassignacio=Reassignació massiva de tasques
 expedient.massiva.titol=Execució d'accions massives
