--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -228,6 +228,7 @@ expedient.tipus.info.camp.demana.titol=Demana títol?
 expedient.tipus.info.camp.amb.numero=Amb número?
 expedient.tipus.info.camp.demana.numero=Demana número?
 expedient.tipus.info.camp.permet.retroaccio=Permet retroacció?
+expedient.tipus.info.camp.permet.reindexacioAsincrona=Reindexar asíncronament?
 expedient.tipus.info.camp.definicio.proces.inicial=Definició de procés inicial
 expedient.tipus.info.camp.reponsable.defecte=Responsable per defecte
 expedient.tipus.info.accio.modificar=Modificar
@@ -261,6 +262,7 @@ expedient.tipus.form.camp.responsableDefecteCodi=Responsable per defecte
 expedient.tipus.form.camp.restringirPerGrup=Restringir accés segons el grups de l'usuari
 expedient.tipus.form.camp.seleccionarAny=Permetre seleccionar any d'inici d'expedient
 expedient.tipus.form.camp.ambRetroaccio=Amb retroacció
+expedient.tipus.form.camp.reindexacioAsincrona=Reindexació asíncrona
 
 expedient.tipus.permis.titol=Permisos del tipus d'expedient
 expedient.tipus.permis.columna.principal=Principal
