833: Reindexació d'expedients asíncrona
Task-Url: https://github.com/GovernIB/helium/issues/issue/833

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -58,6 +58,9 @@ expedient.consulta.anulats.anulats=Anul·lats
 expedient.consulta.anulats.tots=Actius i anul·lats
 expedient.consulta.anulats.mostrar=Mostrar expedients
 expedient.consulta.params.modal.titol=Paràmetres de l'informe
+expedient.consulta.reindexacio.asincrona=L'expedient està pendent de reindexar
+expedient.consulta.reindexacio.error=Error de reindexació.
+expedient.consulta.reindexacio.error.full=L'expedient no s'ha pogut reindexar a causa d'un error intern. Consulti els logs per a més informació.
 
 expedient.dada.esborrar=Esborrar dada
 expedient.dada.modificar=Modificar dada
