826: Redefinició de permisos de l'aplicació
Task-Url: http://github.com/GovernIB/helium/issues/issue/826

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -476,7 +476,27 @@ permis.WRITE=Modificar
 permis.CREATE=Crear
 permis.DELETE=Esborrar
 permis.ADMINISTRATION=Administrar
+permis.CANCEL=Cancel·lar
+permis.STOP=Aturar
+permis.RELATE=Relacionar
+permis.DATA_MANAGEMENT=Dada gestionar
+permis.DOC_MANAGEMENT=Document gestionar
+permis.TERM_MANAGEMENT=Termini gestionar
+permis.TASK_MANAGEMENT=Tasca gestionar
+permis.TASK_SUPERVISION=Tasca supervisar
+permis.TASK_ASSIGN=Tasca assignar
+permis.GO_BACK=Retrocedir
+permis.DESIGN_ADMIN=Disseny admin
+permis.DESIGN_DELEG=Disseny delegat
+permis.SCRIPT_EXE=Execució d'scripts
+permis.UNDO_END=Desfinalitzar
+permis.DEFPROC_UPDATE=Actualitzar defproc.
+permis.ORGANIZATION=Organització
 permis.DESIGN=Disseny
+permis.SUPERVISION=Supervisió
+permis.MANAGE=Gestió
+permis.REASSIGNMENT=Reassignació
+
 
 #############################################################
 # MISSATGES D'ERROR
