--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -487,7 +487,10 @@ permis.TERM_MANAGEMENT=Termini gestionar
 permis.TASK_MANAGEMENT=Tasca gestionar
 permis.TASK_SUPERVISION=Tasca supervisar
 permis.TASK_ASSIGN=Tasca assignar
-permis.GO_BACK=Retrocedir
+permis.LOG_READ=Registre accés
+permis.LOG_MANAGE=Registre gestionar
+permis.TOKEN_READ=Token accés
+permis.TOKEN_MANAGE=Token gestionar
 permis.DESIGN_ADMIN=Disseny admin
 permis.DESIGN_DELEG=Disseny delegat
 permis.SCRIPT_EXE=Execució d'scripts
