# WARNING: head commit changed in the meantime
820: Simplificació de la configuració en les definicions de procés 

Task-Url: https://github.com/GovernIB/helium/issues/issues/issue/820

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -232,11 +232,13 @@ expedient.tipus.info.camp.definicio.proces.inicial=Definició de procés inicial
 expedient.tipus.info.camp.reponsable.defecte=Responsable per defecte
 expedient.tipus.info.accio.modificar=Modificar
 expedient.tipus.info.pipella.estats=Estats
+expedient.tipus.info.pipella.variables=Variables
 expedient.tipus.info.pipella.definicions.proces=Definicions de procés
 expedient.tipus.info.pipella.integracio.tramits=Integració amb tràmits
 expedient.tipus.info.pipella.integracio.forms=Integració amb forms
 expedient.tipus.info.pipella.enumeracions=Enumeracions
 expedient.tipus.info.pipella.documents=Documents
+expedient.tipus.info.pipella.terminis=Terminis
 expedient.tipus.info.pipella.dominis=Dominis
 expedient.tipus.info.pipella.consultes=Consultes
 expedient.tipus.info.permis.no=No disposa de permís per a modificar l'expedient
@@ -285,6 +287,27 @@ expedient.tipus.controller.modificat=El tipus d'expedient s'ha modificat correct
 expedient.tipus.controller.eliminat=El tipus d'expedient s'ha elimitat correctament
 expedient.tipus.controller.eliminar.expedients.relacionats=Hi ha expedients iniciats amb aquest tipus
 expedient.tipus.controller.permis.actualitzat=S'ha actualitzat el permis per al tipus d'expedient
+
+expedient.tipus.camp.llistat.columna.codi=Codi
+expedient.tipus.camp.llistat.columna.etiqueta=Títol
+expedient.tipus.camp.llistat.columna.tipus=Tipus
+expedient.tipus.camp.llistat.columna.multiple=Múltiple
+expedient.tipus.camp.llistat.accio.permisos=Permisos
+expedient.tipus.camp.llistat.accio.nova=Nova variable
+expedient.tipus.camp.llistat.accio.modificar=Modificar
+expedient.tipus.camp.llistat.accio.esborrar=Esborrar
+expedient.tipus.camp.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta variable?
+
+expedient.tipus.campform.titol.nou=Crear una nova variable
+expedient.tipus.campform.titol.modificar=Modificar la variable
+expedient.tipus.campform.camp.codi=Codi
+expedient.tipus.campform.camp.tipus=Tipus
+expedient.tipus.campform.camp.etiqueta=Etiqueta
+
+expedient.tipus.camp.validacio.codi.repetit=Aquest codi ja existeix
+expedient.tipus.camp.controller.creat=La variable s'ha creat correctament
+expedient.tipus.camp.controller.modificat=La variable s'ha modificat correctament
+expedient.tipus.camp.controller.eliminat=La variable s'ha elimitat correctament
 
 expedient.accio.errors.titol=Errors de l'expedient
 expedient.accio.aturar.titol=Aturar expedient
