820: Simplificació de la configuració en les definicions de procés
Task-Url: https://github.com/GovernIB/helium/issues/issues/issue/820

Manteniment de variables a falta de reordenació, completar formulari i
bótó validacions.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -219,7 +219,7 @@ expedient.tipus.llistat.accio.dissenyar=Dissenyar
 expedient.tipus.llistat.accio.esborrar=Esborrar
 expedient.tipus.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest tipus d'expedient? Aquesta acció no es pot tornar enrera una vegada executada.
 
-expedient.tipus.info.titol=Informació del tipus d'expedient
+expedient.tipus.info.titol=Configuració del tipus d'expedient
 expedient.tipus.info.informacio=Informació
 expedient.tipus.info.camp.codi=Codi
 expedient.tipus.info.camp.titol=Títol
@@ -232,6 +232,8 @@ expedient.tipus.info.camp.permet.reindexacioAsincrona=Reindexar asíncronament?
 expedient.tipus.info.camp.definicio.proces.inicial=Definició de procés inicial
 expedient.tipus.info.camp.reponsable.defecte=Responsable per defecte
 expedient.tipus.info.accio.modificar=Modificar
+expedient.tipus.info.accio.agrupar=Agrupar
+expedient.tipus.info.accio.desagrupar=Desagrupar
 expedient.tipus.info.pipella.estats=Estats
 expedient.tipus.info.pipella.variables=Variables
 expedient.tipus.info.pipella.definicions.proces=Definicions de procés
@@ -299,17 +301,45 @@ expedient.tipus.camp.llistat.accio.nova=Nova variable
 expedient.tipus.camp.llistat.accio.modificar=Modificar
 expedient.tipus.camp.llistat.accio.esborrar=Esborrar
 expedient.tipus.camp.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta variable?
+expedient.tipus.camp.llistat.agrupacio.seleccionada=Agrupació seleccionada
+expedient.tipus.camp.llistat.agrupacio.boto.crear=Crear nova agrupació
+expedient.tipus.camp.llistat.agrupacio.boto.modificar=Modificar la agrupació seleccionada
+expedient.tipus.camp.llistat.agrupacio.boto.esborrar=Eliminar la agrupació seleccionada
+expedient.tipus.camp.llistat.agrupacio.boto.esborrar.confirm=Estau segur que voleu esborrar aquesta agrupació?
 
-expedient.tipus.campform.titol.nou=Crear una nova variable
-expedient.tipus.campform.titol.modificar=Modificar la variable
-expedient.tipus.campform.camp.codi=Codi
-expedient.tipus.campform.camp.tipus=Tipus
-expedient.tipus.campform.camp.etiqueta=Etiqueta
+expedient.tipus.camp.form.titol.nou=Crear una nova variable
+expedient.tipus.camp.form.titol.modificar=Modificar la variable
+expedient.tipus.camp.form.camp.codi=Codi
+expedient.tipus.camp.form.camp.tipus=Tipus
+expedient.tipus.camp.form.camp.etiqueta=Etiqueta
+expedient.tipus.camp.form.camp.observacions=Observacions
+expedient.tipus.camp.form.camp.agrupacio=Agrupació de variables
+expedient.tipus.camp.form.camp.multiple=Múltiple
+expedient.tipus.camp.form.camp.ocult=Ocult
+expedient.tipus.camp.form.camp.ignored=No retrocedir valor
+expedient.tipus.camp.form.fieldset.consulta=Dades per la consulta
+
+expedient.tipus.camp.form.fieldset.accio=Dades per la acció
 
 expedient.tipus.camp.validacio.codi.repetit=Aquest codi ja existeix
 expedient.tipus.camp.controller.creat=La variable s'ha creat correctament
 expedient.tipus.camp.controller.modificat=La variable s'ha modificat correctament
 expedient.tipus.camp.controller.eliminat=La variable s'ha elimitat correctament
+
+
+
+expedient.tipus.campAgrupacio.form.titol.nou=Crear una nova agrupació
+expedient.tipus.campAgrupacio.form.titol.modificar=Modificar la agrupació
+expedient.tipus.campAgrupacio.form.camp.codi=Codi
+expedient.tipus.campAgrupacio.form.camp.nom=Nom
+expedient.tipus.campAgrupacio.form.camp.descripcio=Descripció
+
+expedient.tipus.campAgrupacio.validacio.codi.repetit=Aquest codi ja existeix
+expedient.tipus.campAgrupacio.controller.creat=La agrupació s'ha creat correctament
+expedient.tipus.campAgrupacio.controller.modificat=La agrupació s'ha modificat correctament
+expedient.tipus.campAgrupacio.controller.eliminat=La agrupació s'ha elimitat correctament
+
+
 
 expedient.accio.errors.titol=Errors de l'expedient
 expedient.accio.aturar.titol=Aturar expedient
