820: Simplificació de la configuració en les definicions de procés
Task-Url: https://github.com/GovernIB/helium/issues/issue/820

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -340,6 +340,21 @@ expedient.tipus.campAgrupacio.controller.modificat=La agrupació s'ha modificat c
 expedient.tipus.campAgrupacio.controller.eliminat=La agrupació s'ha elimitat correctament
 
 
+### MANTENIMENT DOCUMENTS DEL TIPUS D'EXPEDIENT ###
+expedient.tipus.document.llistat.columna.codi=Codi
+expedient.tipus.document.llistat.columna.nom=Nom
+expedient.tipus.document.llistat.columna.plantilla=És plantilla?
+expedient.tipus.document.llistat.columna.arxiu=Arxiu
+#expedient.tipus.document.llistat.accio.permisos=Permisos
+#expedient.tipus.document.llistat.accio.nova=Nova variable
+#expedient.tipus.document.llistat.accio.modificar=Modificar
+#expedient.tipus.document.llistat.accio.esborrar=Esborrar
+#expedient.tipus.document.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta variable?
+#expedient.tipus.document.llistat.agrupacio.seleccionada=Agrupació seleccionada
+#expedient.tipus.document.llistat.agrupacio.boto.crear=Crear nova agrupació
+#expedient.tipus.document.llistat.agrupacio.boto.modificar=Modificar la agrupació seleccionada
+#expedient.tipus.document.llistat.agrupacio.boto.esborrar=Eliminar la agrupació seleccionada
+#expedient.tipus.document.llistat.agrupacio.boto.esborrar.confirm=Estau segur que voleu esborrar aquesta agrupació?
 
 expedient.accio.errors.titol=Errors de l'expedient
 expedient.accio.aturar.titol=Aturar expedient
