--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -325,7 +325,7 @@ expedient.tipus.camp.validacio.codi.repetit=Aquest codi ja existeix
 expedient.tipus.camp.controller.creat=La variable s'ha creat correctament
 expedient.tipus.camp.controller.modificat=La variable s'ha modificat correctament
 expedient.tipus.camp.controller.eliminat=La variable s'ha elimitat correctament
-
+expedient.tipus.camp.validacio = Errors de validació
 
 
 expedient.tipus.campAgrupacio.form.titol.nou=Crear una nova agrupació
@@ -346,15 +346,29 @@ expedient.tipus.document.llistat.columna.nom=Nom
 expedient.tipus.document.llistat.columna.plantilla=És plantilla?
 expedient.tipus.document.llistat.columna.arxiu=Arxiu
 #expedient.tipus.document.llistat.accio.permisos=Permisos
-#expedient.tipus.document.llistat.accio.nova=Nova variable
+expedient.tipus.document.llistat.accio.nova=Nou document
 #expedient.tipus.document.llistat.accio.modificar=Modificar
 #expedient.tipus.document.llistat.accio.esborrar=Esborrar
-#expedient.tipus.document.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta variable?
+expedient.tipus.document.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest document?
 #expedient.tipus.document.llistat.agrupacio.seleccionada=Agrupació seleccionada
 #expedient.tipus.document.llistat.agrupacio.boto.crear=Crear nova agrupació
 #expedient.tipus.document.llistat.agrupacio.boto.modificar=Modificar la agrupació seleccionada
 #expedient.tipus.document.llistat.agrupacio.boto.esborrar=Eliminar la agrupació seleccionada
 #expedient.tipus.document.llistat.agrupacio.boto.esborrar.confirm=Estau segur que voleu esborrar aquesta agrupació?
+
+expedient.tipus.document.form.titol.nou=Crear un nou document
+expedient.tipus.document.form.titol.modificar=Modificar el document
+expedient.tipus.document.form.camp.codi=Codi
+expedient.tipus.document.form.camp.nom=Nom
+expedient.tipus.document.form.camp.descripcio=Descripcio
+expedient.tipus.document.form.camp.plantilla=És plantilla?
+expedient.tipus.document.form.camp.arxiu=Arxiu
+
+#expedient.tipus.document.validacio.codi.repetit=Aquest codi ja existeix
+expedient.tipus.document.controller.creat=El document s'ha creat correctament
+expedient.tipus.document.controller.modificat=El document s'ha modificat correctament
+expedient.tipus.document.controller.eliminat=El document s'ha eliminat correctament
+
 
 expedient.accio.errors.titol=Errors de l'expedient
 expedient.accio.aturar.titol=Aturar expedient
