820: Simplificació de la configuració en les definicions de procés
Task-Url: https://github.com/GovernIB/helium/issues/issues/issue/820

Codi amb la resta de camps de la variable i validacions del command a
falta de:
- Botó de Validacions
- Comprovar permisos de disseny sobre el tipus d'expedient
- Reordenació de variables i agrupacions

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -318,10 +318,24 @@ expedient.tipus.camp.form.camp.multiple=Múltiple
 expedient.tipus.camp.form.camp.ocult=Ocult
 expedient.tipus.camp.form.camp.ignored=No retrocedir valor
 expedient.tipus.camp.form.fieldset.consulta=Dades per la consulta
+expedient.tipus.camp.form.camp.enumeracio=Enumeració
+expedient.tipus.camp.form.camp.domini=Domini
+expedient.tipus.camp.form.camp.dominiIntern=Domini intern
+expedient.tipus.camp.form.camp.consulta=Consulta
+expedient.tipus.camp.form.camp.dominiIdentificador=Id del domini
+expedient.tipus.camp.form.camp.dominiParametres=Paràmetres del domini
+expedient.tipus.camp.form.camp.dominiCampValor=Camp amb el valor
+expedient.tipus.camp.form.camp.dominiCampText=Camp amb el text
+expedient.tipus.camp.form.camp.consultaParametres=Paràmetres de la consulta
+expedient.tipus.camp.form.camp.consultaCampValor=Camp amb el valor
+expedient.tipus.camp.form.camp.consultaCampText=Camp amb el text
+expedient.tipus.camp.form.camp.dominiCacheText=Mantenir valor de la consulta
+
 
 expedient.tipus.camp.form.fieldset.accio=Dades per la acció
 
 expedient.tipus.camp.validacio.codi.repetit=Aquest codi ja existeix
+expedient.tipus.camp.validacio.enumdomcons.buit=s''ha d''especificar una enumeració, un domini o una consulta
 expedient.tipus.camp.controller.creat=La variable s'ha creat correctament
 expedient.tipus.camp.controller.modificat=La variable s'ha modificat correctament
 expedient.tipus.camp.controller.eliminat=La variable s'ha elimitat correctament
