820: Simplificació de la configuració en les definicions de procés (DOCUMENTS)
Task-Url: https://github.com/GovernIB/helium/issues/issue/820

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -345,7 +345,6 @@ expedient.tipus.document.llistat.columna.codi=Codi
 expedient.tipus.document.llistat.columna.nom=Nom
 expedient.tipus.document.llistat.columna.plantilla=És plantilla?
 expedient.tipus.document.llistat.columna.arxiu=Arxiu
-#expedient.tipus.document.llistat.accio.permisos=Permisos
 expedient.tipus.document.llistat.accio.nova=Nou document
 #expedient.tipus.document.llistat.accio.modificar=Modificar
 #expedient.tipus.document.llistat.accio.esborrar=Esborrar
@@ -363,6 +362,14 @@ expedient.tipus.document.form.camp.nom=Nom
 expedient.tipus.document.form.camp.descripcio=Descripcio
 expedient.tipus.document.form.camp.plantilla=És plantilla?
 expedient.tipus.document.form.camp.arxiu=Arxiu
+expedient.tipus.document.form.camp.codi_custodia=Codi per a la custòdia
+expedient.tipus.document.form.camp.tipus_doc=Tipus de document
+expedient.tipus.document.form.camp.codi_doc=Codi del document pel portasignatures
+expedient.tipus.document.form.camp.adj_auto=Adjuntar automàticament al generar
+expedient.tipus.document.form.camp.gen_ext=Extensió de sortida al generar
+expedient.tipus.document.form.camp.ext_perm=Extensions d'arxiu permeses
+expedient.tipus.document.form.camp.sep_comes=Separades per comes
+expedient.tipus.document.form.camp.ctype=Content type
 
 #expedient.tipus.document.validacio.codi.repetit=Aquest codi ja existeix
 expedient.tipus.document.controller.creat=El document s'ha creat correctament
