826: Redefinició de permisos de l'aplicació
Task-Url: https://github.com/GovernIB/helium/issues/issue/826

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -20,6 +20,35 @@ error.tipus.integracions=Errors d'Integracions
 error.tipus.basic.no=Sense errors bàsics
 error.tipus.integracions.no=Sense errors d'integracions
 
+entorn.llistat.titol=Entorns
+entorn.llistat.columna.codi=Codi
+entorn.llistat.columna.nom=Nom
+entorn.llistat.accio.nou=Nou entorn
+entorn.llistat.accio.permisos=Permisos
+entorn.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest entorn?
+
+entorn.form.titol.nou=Crear entorn
+entorn.form.titol.modificar=Modificar entorn
+entorn.form.camp.codi=Codi
+entorn.form.camp.nom=Nom
+entorn.form.camp.descripcio=Descripció
+
+entorn.permis.titol=Permisos de l'entorn
+entorn.permis.columna.principal=Principal
+entorn.permis.columna.tipus=Tipus
+entorn.permis.columna.permisos=Permisos
+entorn.permis.confirmacio.esborrar=Estau segur que voleu esborrar aquest permís?
+entorn.permis.accio.nou=Nou permís
+
+entorn.permis.form.titol.nou=Nou permis
+entorn.permis.form.titol.modificar=Modificar permis
+entorn.permis.form.camp.tipus=Tipus
+entorn.permis.form.camp.principal=Principal
+
+entorn.controller.creat=L'entorn s'ha creat correctament
+entorn.controller.modificat=L'entorn s'ha modificat correctament
+entorn.controller.permis.actualitzat=S'ha actualitzat el permis per a l'entorn
+
 alerta.llistat.marcar_com_llegida=Marcar llegida
 alerta.llistat.marcar_no_llegida=Desmarcar llegida
 
@@ -326,8 +355,6 @@ expedient.tipus.camp.controller.creat=La variable s'ha creat correctament
 expedient.tipus.camp.controller.modificat=La variable s'ha modificat correctament
 expedient.tipus.camp.controller.eliminat=La variable s'ha elimitat correctament
 
-
-
 expedient.tipus.campAgrupacio.form.titol.nou=Crear una nova agrupació
 expedient.tipus.campAgrupacio.form.titol.modificar=Modificar la agrupació
 expedient.tipus.campAgrupacio.form.camp.codi=Codi
@@ -497,6 +524,7 @@ comu.boto.generar=Generar
 comu.boto.tancar=Tancar
 comu.boto.crear=Crear
 comu.boto.modificar=Modificar
+comu.boto.esborrar=Esborrar
 comu.boto.tornar=Tornar
 comu.tots=Tots
 
