820: Simplificació de la configuració en les definicions de procés
Task-Url: https://github.com/GovernIB/helium/issues/issues/issue/820

Codi corresponent a la navegació modal i al funcionament correcte.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -331,12 +331,18 @@ expedient.tipus.camp.llistat.accio.validacions=Validacions
 expedient.tipus.camp.llistat.accio.nova=Nova variable
 expedient.tipus.camp.llistat.accio.modificar=Modificar
 expedient.tipus.camp.llistat.accio.esborrar=Esborrar
+expedient.tipus.camp.llistat.accio.esborrar.error=S'ha produït un error al interntar esborrar la variable del tipus d'expedient
+expedient.tipus.camp.llistat.accio.esborrar.correcte=La variable s'ha esborrat correctament
+
 expedient.tipus.camp.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta variable?
 expedient.tipus.camp.llistat.agrupacio.seleccionada=Agrupació seleccionada
 expedient.tipus.camp.llistat.agrupacio.boto.crear=Crear nova agrupació
 expedient.tipus.camp.llistat.agrupacio.boto.modificar=Modificar la agrupació seleccionada
 expedient.tipus.camp.llistat.agrupacio.boto.esborrar=Eliminar la agrupació seleccionada
 expedient.tipus.camp.llistat.agrupacio.boto.esborrar.confirm=Estau segur que voleu esborrar aquesta agrupació?
+expedient.tipus.camp.llistat.agrupacio.boto.esborrar.error=S'ha produït un error al interntar esborrar la agrupació
+expedient.tipus.camp.llistat.agrupacio.boto.esborrar.correcte=La agrupació s'ha esborrat correctament
+
 expedient.tipus.camp.llistat.agrupacio.boto.ordenar=Ordenar les agrupacions
 
 expedient.tipus.camp.form.titol.nou=Crear una nova variable
@@ -401,7 +407,8 @@ expedient.tipus.campValidacio.form.camp.missatge=Missatge
 expedient.tipus.campValidacio.validacio.codi.repetit=Aquest codi ja existeix
 expedient.tipus.campValidacio.controller.creat=La validació s'ha creat correctament
 expedient.tipus.campValidacio.controller.modificat=La validació s'ha modificat correctament
-expedient.tipus.campValidacio.controller.eliminat=La validació s'ha elimitat correctament
+expedient.tipus.campValidacio.controller.eliminar.success=La validació s'ha elimitat correctament
+expedient.tipus.campValidacio.controller.eliminar.error=S'ha produït un error intentant eliminar la validació
 
 expedient.tipus.agrupacio.llistat.titol=Reordenació de les agrupacions
 expedient.tipus.agrupacio.llistat.columna.codi=Codi
