821: Manteniment de tipus d'expedient (Manteniment de Enumerats)
Task-Url: http://github.com/GovernIB/helium/issues/issue/821

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -418,6 +418,43 @@ expedient.tipus.document.controller.creat=El document s'ha creat correctament
 expedient.tipus.document.controller.modificat=El document s'ha modificat correctament
 expedient.tipus.document.controller.eliminat=El document s'ha eliminat correctament
 
+## MANTENIMENT DE ENUMERACIONS A TIPUS DE EXPEDIENT ##
+expedient.tipus.enumeracio.llistat.accio.nova=Nova enumeració
+expedient.tipus.enumeracio.llistat.columna.codi=Codi
+expedient.tipus.enumeracio.llistat.columna.titol=Títol
+expedient.tipus.enumeracio.llistat.boto.valors=Valors
+expedient.tipus.enumeracio.llistat.confirm.esborra=Estau segur que voleu esborrar aquesta enumeració?
+
+expedient.tipus.enumeracio.valors.llistat.accio.nova=Nou valor
+expedient.tipus.enumeracio.valors.llistat.columna.codi=Codi
+expedient.tipus.enumeracio.valors.llistat.columna.titol=Títol
+expedient.tipus.enumeracio.valors.llistat.columna.ordre=Ordre
+expedient.tipus.enumeracio.valors.llistat.confirm.esborra=Estau segur que voleu esborrar aquest valor de l'enumeració?
+expedient.tipus.enumeracio.valors.llistat.esborrat.ko=El valor no s´ha pogut borrar
+
+expedient.tipus.enumeracio.form.titol.nou=Crear nou enumerat
+expedient.tipus.enumeracio.form.titol.modificar=Modificar enumerat
+expedient.tipus.enumeracio.form.titol.llistat=Llistat de valors de l'enumerat
+expedient.tipus.enumeracio.form.camp.codi=Codi
+expedient.tipus.enumeracio.form.camp.nom=Nom
+
+expedient.tipus.enumeracio.valors.form.titol.nou=Crear nou valor per l'enumerat
+expedient.tipus.enumeracio.valors.form.titol.modificar=Modificar valor de l'enumerat
+expedient.tipus.enumeracio.valors.form.camp.codi=Codi
+expedient.tipus.enumeracio.valors.form.camp.nom=Nom
+
+expedient.tipus.enumeracio.controller.creat=L'enumeració s'ha creat correctament
+expedient.tipus.enumeracio.controller.modificat=L'enumeració s'ha modificat correctament
+expedient.tipus.enumeracio.controller.eliminat=L'enumeració s'ha eliminat correctament
+expedient.tipus.enumeracio.controller.eliminat.us=L'enumeració s'està utilitzant com a variable en algún camp de definició de procés i no es pot borrar.
+
+expedient.tipus.enumeracio.valors.controller.creat=L'enumeració s'ha creat correctament
+expedient.tipus.enumeracio.valors.controller.modificat=L'enumeració s'ha modificat correctament
+expedient.tipus.enumeracio.valors.controller.eliminat=L'enumeració s'ha eliminat correctament
+expedient.tipus.enumeracio.valors.controller.eliminat.us=L'enumeració s'està utilitzant com a variable en algún camp de definició de procés i no es pot borrar.
+
+expedient.tipus.enumeracio.valors.controller.error.obligatori=Aquest camp es obligatori.
+## FI MANTENIMENT DE ENUMERACIONS A TIPUS DE EXPEDIENT ##
 
 expedient.accio.errors.titol=Errors de l'expedient
 expedient.accio.aturar.titol=Aturar expedient
