820: Simplificació de la configuració en les definicions de procés DOCUMENTS
Task-Url: https://github.com/GovernIB/helium/issues/issue/820

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -422,7 +422,7 @@ expedient.tipus.document.llistat.columna.plantilla=És plantilla?
 expedient.tipus.document.llistat.columna.arxiu=Arxiu
 expedient.tipus.document.llistat.accio.nova=Nou document
 #expedient.tipus.document.llistat.accio.modificar=Modificar
-#expedient.tipus.document.llistat.accio.esborrar=Esborrar
+expedient.tipus.document.llistat.accio.esborrar.error=S'ha produït un error al interntar esborrar el document del tipus d'expedient
 expedient.tipus.document.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest document?
 #expedient.tipus.document.llistat.agrupacio.seleccionada=Agrupació seleccionada
 #expedient.tipus.document.llistat.agrupacio.boto.crear=Crear nova agrupació
