859: No es llisten les peticions a domini intern en el monitor de dominis
Task-Url: https://github.com/GovernIB/helium/issues/issues/859

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -385,6 +385,7 @@ expedient.nova.data.codi=Codi
 expedient.nova.data.valor=Valor
 
 monitor.domini.titol=Monitor de consultes a domini
+monitor.domini.opcio.dominis.interns=Dominis interns
 monitor.domini.camp.entorn=Entorn
 monitor.domini.camp.domini=Domini
 monitor.domini.columna.data=Data
