821: Manteniment de tipus d'expedient
Task-Url: http://github.com/GovernIB/helium/issues/issue/821

Mantniment de valors de enumerats.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -467,7 +467,7 @@ expedient.tipus.enumeracio.valors.llistat.esborrat.ko=El valor no s´ha pogut bor
 
 expedient.tipus.enumeracio.form.titol.nou=Crear nou enumerat
 expedient.tipus.enumeracio.form.titol.modificar=Modificar enumerat
-expedient.tipus.enumeracio.form.titol.llistat=Llistat de valors de l'enumerat
+expedient.tipus.enumeracio.form.titol.llistat=Valors de l'enumerat: 
 expedient.tipus.enumeracio.form.camp.codi=Codi
 expedient.tipus.enumeracio.form.camp.nom=Nom
 
@@ -481,10 +481,10 @@ expedient.tipus.enumeracio.controller.modificat=L'enumeració s'ha modificat corr
 expedient.tipus.enumeracio.controller.eliminat=L'enumeració s'ha eliminat correctament
 expedient.tipus.enumeracio.controller.eliminat.us=L'enumeració s'està utilitzant com a variable en algún camp de definició de procés i no es pot borrar.
 
-expedient.tipus.enumeracio.valors.controller.creat=L'enumeració s'ha creat correctament
-expedient.tipus.enumeracio.valors.controller.modificat=L'enumeració s'ha modificat correctament
-expedient.tipus.enumeracio.valors.controller.eliminat=L'enumeració s'ha eliminat correctament
-expedient.tipus.enumeracio.valors.controller.eliminat.us=L'enumeració s'està utilitzant com a variable en algún camp de definició de procés i no es pot borrar.
+expedient.tipus.enumeracio.valors.controller.creat=El valor de l'enumeració s'ha creat correctament
+expedient.tipus.enumeracio.valors.controller.modificat=El valor de l'enumeració s'ha modificat correctament
+expedient.tipus.enumeracio.valors.controller.eliminat=El valor de l'enumeració s'ha eliminat correctament
+expedient.tipus.enumeracio.valors.controller.eliminat.us=Hi ha hagut un error eliminant el valor de l'enumeració.
 
 expedient.tipus.enumeracio.valors.controller.error.obligatori=Aquest camp es obligatori.
 ## FI MANTENIMENT DE ENUMERACIONS A TIPUS DE EXPEDIENT ##
