821: Manteniment de tipus d'expedient
Task-Url: http://github.com/GovernIB/helium/issues/issue/821

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -502,6 +502,7 @@ expedient.tipus.enumeracio.form.camp.codi=Codi
 expedient.tipus.enumeracio.form.camp.nom=Nom
 
 expedient.tipus.enumeracio.valors.form.titol.nou=Crear nou valor per l'enumerat
+expedient.tipus.enumeracio.valors.form.titol.imp=Importar valors des d'arxiu
 expedient.tipus.enumeracio.valors.form.titol.modificar=Modificar valor de l'enumerat
 expedient.tipus.enumeracio.valors.form.camp.codi=Codi
 expedient.tipus.enumeracio.valors.form.camp.nom=Nom
@@ -517,6 +518,12 @@ expedient.tipus.enumeracio.valors.controller.eliminat=El valor de l'enumeració s
 expedient.tipus.enumeracio.valors.controller.eliminat.us=Hi ha hagut un error eliminant el valor de l'enumeració.
 
 expedient.tipus.enumeracio.valors.controller.error.obligatori=Aquest camp es obligatori.
+
+expedient.tipus.enumeracio.valors.importar.eliminar=Eliminar valors anteriors?
+expedient.tipus.enumeracio.valors.importar.arxiu=Seleccionau arxiu
+expedient.tipus.enumeracio.valors.importar.arxiu.buid=Heu de seleccionar un arxiu del qual importar les dades.
+expedient.tipus.enumeracio.valors.importats=Els valor s'han importat correctament.
+expedient.tipus.enumeracio.valors.importats.error=S'ha produït un error durant la'importació dels valors.
 ## FI MANTENIMENT DE ENUMERACIONS A TIPUS DE EXPEDIENT ##
 
 expedient.accio.errors.titol=Errors de l'expedient
