792: Eliminar DP nivell tipus d'expedient
Task-Url: http://github.com/GovernIB/helium/issues/issue/792

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -503,6 +503,7 @@ info.accio.executades=Les accions s'han executat correctament
 info.accio.massiu.executat=S&#39;ha programat la execució d''accions a {0} expedient(s)
 info.reindexar.massiu.executat=S&#39;ha programat la reindexació de {0} expedient(s)
 info.buidarlog.massiu.executat=S&#39;ha programat la eliminació de la informació de registre de {0} expedient(s)
+info.buidarlog.executat=S'ha eliminat la informació de registre de l'expedient
 info.accio.massiu.reassignat=S&#39;ha programat la reassignació de {0} tasca(ques)
 info.accio.massiu.reprendre=S&#39;ha programat l&#39;acció de reprendre tramitació de {0} expedient(s)
 info.accio.massiu.reprendre_expedient=S&#39;ha programat l'acció de desfer finalització de {0} expedient(s)
