792: Eliminar DP nivell tipus d'expedient
Task-Url: http://github.com/GovernIB/helium/issues/issue/792

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -451,6 +451,11 @@ info.camp.tasca.esborrat=S'ha esborrat el camp de la tasca
 
 info.defproc.esborrat=La definició de procés s'ha esborrat correctament
 info.defproc.esborrada=La definició de procés {0} v.{1} s'ha esborrat correctament
+info.defproc.esborrar.afectats=Expedients afectats:
+info.defproc.esborrar.afectats.programar=Programar borrat de logs de tots els expedients afectats
+info.defproc.esborrar.massiu.executat=S'ha programat la eliminacio de la informacio de registre de {0} expedient(s)
+info.defproc.esborrar.log.executat=S'ha eliminat la informacio de registre de l'expedient
+
 info.dades.importat=Les dades s'han importat correctament
 
 txt.desplegament.jbpm=Desplegament jBPM
